--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "mkdir -p build && cp -r public/* public/audio/* build/"
+    "build": "mkdir -p build/audio build/data && cp src/index.html build/ && cp src/script.js build/ && cp src/audio/* build/audio/ && cp src/data/* build/data/"
   },
   "keywords": [],
   "author": "",
