--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "mkdir -p build/audio build/data && cp src/index.html build/ && cp src/script.js build/ && cp src/audio/* build/audio/ && cp src/data/* build/data/"
+    "build": "rimraf build && mkdir -p build/audio build/data && cp src/index.html build/ && cp src/script.js build/ && cp src/audio/* build/audio/ && cp src/data/* build/data/"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,8 @@
     "@google-cloud/text-to-speech": "^5.3.0",
     "csv-parser": "^3.0.0",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "rimraf": "^6.0.1"
   }
 }
