converting csv to json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build": "rimraf build && cp -r src build"
+    "build": "rimraf build && mkdir -p build/data && cp -r src/* build/ && node convert-csv-to-json.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "csvtojson": "^2.0.10",
     "rimraf": "^6.0.1"
   }
 }
